# src/routes/userRoutes.js
@@ -10,11 +10,14 @@ const {
     deletarUsuario
 } = require('../controllers/userController');
 
-router.post('/register', auth, validateRole('admin'), registrarUsuario);      // Registrar novo usuário
-router.post('/login', loginUsuario);                                          // Login de usuário
-router.get('/:id', auth, buscarUsuario);                                      // Buscar usuário por ID
-router.put('/:id', auth, atualizarUsuario);                                 // Atualizar usuário por ID
-router.delete('/:id', auth, validateRole('admin'), deletarUsuario);           // Deletar usuário por ID
+// Rotas públicas
+router.post('/register', registrarUsuario); // PÚBLICO para primeiro usuário
+router.post('/login', loginUsuario);
+
+// Rotas protegidas
+router.get('/:id', auth, buscarUsuario);
+router.put('/:id', auth, atualizarUsuario);
+router.delete('/:id', auth, validateRole('admin'), deletarUsuario);
 
 module.exports = router;
 
